# bechouette.be

./: Application.hs  Foundation.hs  Model.hs  Settings.hs  bechouette.cabal  devel.hs
Handler/: About.hs  Admin.hs  BirthList.hs  Catalog.hs  Command.hs  Home.hs  Product.hs
app/: main.hs
config/: keter.yaml  models  routes  settings.yml  sqlite.yml
deploy/: Procfile
templates/: about.hamlet  about.lucius  admin-birthlist-edit.hamlet  admin-birthlist.hamlet  admin-birthlists.hamlet  admin-categories.hamlet  admin-category.hamlet  admin-login.hamlet  admin-pictures.hamlet  admin-product.hamlet  admin-products.hamlet  admin-subcategory-edit.hamlet  admin-subcategory-new.hamlet  admin-subcategory.hamlet  admin.hamlet  birthlist.hamlet  birthlists.hamlet  command-birthlist.hamlet  command-catalog.hamlet  command-confirm.hamlet  command-special.hamlet  command.lucius  commandproduct.hamlet  commandproduct.lucius  commandspecial.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  editcat.hamlet  editprod.hamlet  home.hamlet  home.julius  home.lucius  homepage.hamlet  homepage.lucius  login.hamlet  newprod.hamlet  pictures.hamlet  product.hamlet  product.julius  (+2 more)
