name:              bechouette
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.About
                     Handler.Admin
                     Handler.Command
                     Handler.Home
                     Handler.Product

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions:         BangPatterns
                        CPP
                        DeriveDataTypeable
                        OverloadedStrings
                        GADTs
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GeneralizedNewtypeDeriving
                        QuasiQuotes
                        NoMonomorphismRestriction
                        NoImplicitPrelude
                        MultiParamTypeClasses
                        TemplateHaskell
                        TypeFamilies

    build-depends: base                         >= 4            && < 5
                 , aeson
                 , blaze-markup                 >= 0.5.1.6      && < 0.6
                 , bytestring                   >= 0.9          && < 0.11
                 , cereal                       >= 0.4.0.1      && < 0.5
                 , conduit                      >= 1.0
                 , clientsession                >= 0.9.0.3      && < 0.10
                 , data-default
                 , directory                    >= 1.1          && < 1.3
                 , fast-logger                  >= 2.1
                 , filepath                     >= 1.3.0.1      && < 2
                 , friday
                 , hamlet                       >= 1.1.7.5      && < 2
                 , hjsmin                       >= 0.1.4.4      && < 0.2
                 , http-conduit                 >= 2.0          && < 2.1
                 , mime-mail                    >= 0.4.3        && < 0.5
                 , monad-control                >= 0.3          && < 0.4
                 , monad-logger                 >= 0.3
                 , persistent                   >= 1.3          && < 1.4
                 , persistent-sqlite            >= 1.3          && < 1.4
                 , persistent-template          >= 1.3          && < 1.4
                 , shakespeare-text             >= 1            && < 2
                 , template-haskell
                 , text                         >= 0.11         && < 0.12
                 , warp                         >= 2.0          && < 2.1
                 , wai-extra                    >= 2.0          && < 2.1
                 , wai-logger                   >= 2.0
                 , yaml                         >= 0.8          && < 0.9
                 , yesod                        >= 1.2          && < 1.3
                 , yesod-core                   >= 1.2          && < 1.3
                 , yesod-form                   >= 1.3          && < 1.4
                 , yesod-static                 >= 1.2          && < 1.3

executable         bechouette
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , bechouette
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts
